--- a/sketches/Sarafoglou et al (2023).Rmd
+++ b/sketches/Sarafoglou et al (2023).Rmd
@@ -468,7 +468,7 @@ $$
 \end{align*}
 $$
 
-where the two new coefficients $\beta_2$ and $\beta_3$ are for the standardized versions of our two baseline covariates, tz` and `mz`. Both covariates receive the regularizing $\text{Normal}(0, 0.5)$, and the priors for all other parameters are the same as those in the ANOVA version of the model. We will follow the same basic convention for the ZIP ANCOVA and the distributional ZIP ANCOVA. Both will be the same as their ANOVA counterparts, but they will include the new parameters for the two baseline covariates, along with regularizing priors. Here's how to fit the models with `brm()`.
+where the two new coefficients $\beta_2$ and $\beta_3$ are for the standardized versions of our two baseline covariates, `tz` and `mz`. Both covariates receive the regularizing $\text{Normal}(0, 0.5)$, and the priors for all other parameters are the same as those in the ANOVA version of the model. We will follow the same basic convention for the ZIP ANCOVA and the distributional ZIP ANCOVA. Both will be the same as their ANOVA counterparts, but they will include the new parameters for the two baseline covariates, along with regularizing priors. Here's how to fit the models with `brm()`.
 
 ```{r fit4}
 # Poisson ANCOVA
